	* Fixed a problem in cases when the workbench isn't started and the
	  welcome message would have caused error starting the plugin
	* Now it's possible to use a wesnoth project without the 'build.xml' build files.
	  If the build.xml file is missing the user can 'regenerate' it by using the
	  project's context menu. A file without 'build.xml' is considered to be
	  a data/campaigns/ project
	* Removed the User Addons project
	* The 'Setup workspace" action will create a project for each existing
	  data/campaigns/ campaign and for each directory in 'useraddons/data/add-ons'
	* Wesnoth projects building was improved by:
		- removing some unused properties
		- caching of preprocessed files. Files that already have been preprocessed will be skipped.
		- the project macros are read only at the end of the build
	* The *.map files are opened automatically in the game map editor
	* The grammar was updated so the editor will support a broader variety of wml code.
	  Even though, the current grammar has 2 unsupported WML Constructs:
	  1) Attributes with the key name as a macro: (an example: Dead Water campaign/utils/dw-utils.cfg:70)
		{name}=id
	  2) Unterminated/unstarted tags. This is used sometimes in macro definitions.
		(example: Delfadors Memoirs/scenarios/09_Houses_of_the_Undead.cfg, the first 2 macros defined)

		#define macro_start
			[unit]
				id=myunit
		#enddef
		...
		#define macro_end
			[/unit]
		#enddef

		As a resolve to this issue you could write/re-write the macro so instead of having 2 macros
		you would have only one + 1 extra argument that will represent the content replaced in between

	* When there are tags that need to be closed, when the user types: '[/' the last
	  unclosed tag will be closed automatically
	* The user can specify whether the new project wizard should create the files:
	  '_server.pbl' and 'build.xml'
	* Added the 'Wesnoth project' View specialized for viewing wesnoth projects
	* Added wizard for new wesnoth config file (.cfg)