@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: org.wesnoth.wml.ui
 Bundle-Vendor: Wesnoth.org
-Bundle-Version: 1.0.0
+Bundle-Version: 1.1.0
 Bundle-SymbolicName: org.wesnoth.wml.ui; singleton:=true
 Bundle-ActivationPolicy: lazy
 Require-Bundle: org.wesnoth.wml;visibility:=reexport,
@@ -14,9 +14,9 @@ Require-Bundle: org.wesnoth.wml;visibility:=reexport,
  org.eclipse.xtext.builder,
  org.antlr.runtime,
  org.eclipse.xtext.xtext.ui;bundle-version="1.0.0",
- org.wesnoth;bundle-version="0.3.0",
  org.eclipse.core.filesystem;bundle-version="1.3.0",
- org.eclipse.jdt.core;bundle-version="3.6.0"
+ org.eclipse.jdt.core;bundle-version="3.6.0",
+ org.wesnoth;bundle-version="1.0.0"
 Import-Package: org.apache.log4j
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Export-Package: org.wesnoth.ui.contentassist.antlr
