@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Wesnoth UMC Plugin
 Bundle-SymbolicName: org.wesnoth;singleton:=true
-Bundle-Version: 0.3.0
+Bundle-Version: 1.0.0
 Bundle-Activator: org.wesnoth.Activator
 Bundle-Vendor: www.wesnoth.org
 Require-Bundle: org.eclipse.ui,
