@@ -56,7 +56,7 @@
 <body onload="init();">
 <!--[insert static HTML here]-->
 <div id="data"><!-- this is where the transformed data goes --></div>
-Last Update: 27 July 2010 19:32 GMT<br/>
+Last Update: 16 August 19:32 GMT<br/>
 
 Documentation: <a href="README.pdf">README.pdf</a>
 </body>
